src/app/views/scan-screen/scan-screen.component.less
// Copyright © 2022 Xerox Corporation. All Rights Reserved.
@import "../../../assets/Content/Styles/editableField.less";
scan-screen {

    .has-warning {
        .xrx-alert,
        .help-block {
            color: #bc1620;
        }

        &.themed {
            .xrx-alert,
            .help-block {
                color: #ffffff;
            }
        }
    }

    .scanScreen .editable-field-label {
        color: #fff !important;
    }

    .reset-margin {
        margin-top: 4px !important;
        margin-bottom: 4px;

        @media (min-width: 1024px) {
            margin-top: 11.75px !important;
            margin-bottom: 13.5px;
        }
    }
}
.form-control {
    width:99%;
    padding-left: 1%;
}

@media (max-width :1024px){
    .form-control {
        width:98.5%;
    }
}

